   Description field that is set by 'description' in the channel configuration
   file.
 * Added Uniqueid header to UserEvent.
 * Added new action FilterAdd to control event filters for the current session.
   This requires the system permission and uses the same filter syntax as
   filters that can be defined in manager.conf

Asterisk HTTP Server
--------------------------
 * The HTTP Server can bind to IPv6 addresses.

chan_dahdi
--------------------------
 * Busy tone patterns featuring 2 silence and 2 tone lengths can now be used
   with busydetect.  usage example: busypattern=200,200,200,600

CLI Changes
--------------------------
 * New 'gtalk show settings' command showing the current settings loaded from
   gtalk.conf.
 * The 'logger reload' command now supports an optional argument, specifying an
   alternate configuration file to use.
 * 'dialplan add extension' command will now automatically create a context if
   the specified context does not exist with a message indicated it did so.
 * 'sip show peers', 'iax show peers', and 'dahdi show peers' now contains a
   Description field which can be populated with 'description' in the channel
   configuration files (sip.conf, iax2.conf, and chan_dahdi.conf).

CDR
--------------------------
 * The filter option in cdr_adaptive_odbc now supports negating the argument,
   thus allowing records which do NOT match the specified filter.

CODECS
--------------------------
 * Ability to define custom SILK formats in codecs.conf.
 * Addition of speex32 audio format with translation.
 * CELT codec pass-through support and ability to define
   custom CELT formats in codecs.conf.
 * Ability to read raw signed linear files with sample rates
   ranging from 8khz - 192khz.  The new file extensions introduced
   are .sln12, .sln24, .sln32, .sln44, .sln48, .sln96, .sln192.

ConfBridge
--------------------------
 * New highly optimized and customizable ConfBridge application capable of